[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["mopidy_mowecl"]
source-includes = ["mopidy_mowecl/static"]

[tool.pdm.build.wheel-data]
data = [{path = "mopidy_mowecl/static/**/*", relative-to = "."}]

[project]
name = "Mopidy-Mowecl"
version = "dev"
description = "Web client for Mopidy"
authors = [
    {name = "Mathias Millet", email = "mathias@mmill.eu"},
]
dependencies = [
    "Mopidy >= 3.0",
    "Mopidy-Bookmarks >= 0.1.4",
    "Pykka >= 2.0.1",
]
requires-python = ">= 3.9"
readme = "README.rst"
license = {text = "Apache License, Version 2.0"}
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Players",
]

[project.urls]
Homepage = "https://github.com/sapristi/mopidy-mowecl"

[project.optional-dependencies]
lint = [
    "black",
    "check-manifest",
    "flake8",
    "flake8-bugbear",
    "flake8-import-order",
    "isort[pyproject]",
]
release = [
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "black",
    "check-manifest",
    "flake8",
    "flake8-bugbear",
    "flake8-import-order",
    "isort[pyproject]",
    "pytest",
    "pytest-cov",
    "twine",
    "wheel",
    "setuptools>=75.8.0",
    "pre-commit>=4.1.0",
]

[project.entry-points."mopidy.ext"]
mowecl = "mopidy_mowecl:Extension"


[tool.black]
target-version = ["py39", "py310"]
line-length = 80


[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
